force-app/main/default/objects/Unit__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin-Accounting</fullName>
            </value>
            <value>
                <fullName>Admin-Admin Services</fullName>
            </value>
            <value>
                <fullName>Admin-Budgets</fullName>
            </value>
            <value>
                <fullName>Admin-Business Serv</fullName>
            </value>
            <value>
                <fullName>Admin-Human Resources</fullName>
            </value>
            <value>
                <fullName>Admin-OIS</fullName>
            </value>
            <value>
                <fullName>Admin-RTWS</fullName>
            </value>
            <value>
                <fullName>Admin-TPSP</fullName>
            </value>
            <value>
                <fullName>CHSWC</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DLSE</fullName>
            </value>
            <value>
                <fullName>DLSE-IWC</fullName>
            </value>
            <value>
                <fullName>DLSE-PWD/OD-Research</fullName>
            </value>
            <value>
                <fullName>DLSR</fullName>
            </value>
            <value>
                <fullName>DOSH</fullName>
            </value>
            <value>
                <fullName>DOSH-CFOI/OD-Research</fullName>
            </value>
            <value>
                <fullName>DOSH-OIIS/OD-Research</fullName>
            </value>
            <value>
                <fullName>DWC</fullName>
            </value>
            <value>
                <fullName>DWC-RTW/Claims Mgmt</fullName>
            </value>
            <value>
                <fullName>DWC-RTW/SELSP</fullName>
            </value>
            <value>
                <fullName>Fast Food Council</fullName>
            </value>
            <value>
                <fullName>OD-Drug Formulary</fullName>
            </value>
            <value>
                <fullName>OD-Legal N</fullName>
            </value>
            <value>
                <fullName>OD-Legal S</fullName>
            </value>
            <value>
                <fullName>OD-PAGA</fullName>
            </value>
            <value>
                <fullName>OD-PIO/Communications</fullName>
            </value>
            <value>
                <fullName>OD/Anti-Fraud Unit</fullName>
            </value>
            <value>
                <fullName>Office of The Director</fullName>
            </value>
            <value>
                <fullName>OSHAB</fullName>
            </value>
            <value>
                <fullName>OSHSB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>