force-app/main/default/objects/Unit__c/fields/Division_Unit__c.field-meta.xml
<CustomField>
    <fullName>Division_Unit__c</fullName>
    <description>Combination of division and unit, for reporting</description>
    <label>Division/Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OAS/HR</fullName>
            </value>
            <value>
                <fullName>OAS/CNTRS</fullName>
            </value>
            <value>
                <fullName>OAS/FCLTS</fullName>
            </value>
            <value>
                <fullName>OAS/BS</fullName>
            </value>
            <value>
                <fullName>OAS/TPSSB</fullName>
            </value>
            <value>
                <fullName>OAS/AS</fullName>
            </value>
            <value>
                <fullName>OAS/RTW</fullName>
            </value>
            <value>
                <fullName>OAS/SSU</fullName>
            </value>
            <value>
                <fullName>OD/HQ</fullName>
            </value>
            <value>
                <fullName>OD/AFU</fullName>
            </value>
            <value>
                <fullName>OD/OEA</fullName>
            </value>
            <value>
                <fullName>OD/L(N)</fullName>
            </value>
            <value>
                <fullName>OD/L(S)</fullName>
            </value>
            <value>
                <fullName>OD/DIO</fullName>
            </value>
            <value>
                <fullName>OD/ARC</fullName>
            </value>
            <value>
                <fullName>OD/PAGA</fullName>
            </value>
            <value>
                <fullName>OD/DF</fullName>
            </value>
            <value>
                <fullName>OD/RESEARCH</fullName>
            </value>
            <value>
                <fullName>OFS/ACCTG</fullName>
            </value>
            <value>
                <fullName>OFS/OCFO</fullName>
            </value>
            <value>
                <fullName>OFS/BUDGETS</fullName>
            </value>
            <value>
                <fullName>OSIP</fullName>
            </value>
            <value>
                <fullName>OIS</fullName>
            </value>
            <value>
                <fullName>WCAB</fullName>
            </value>
            <value>
                <fullName>CHSWC</fullName>
            </value>
            <value>
                <fullName>DWC/DO</fullName>
            </value>
            <value>
                <fullName>DWC/RO</fullName>
            </value>
            <value>
                <fullName>DWC/ADM-HQ</fullName>
            </value>
            <value>
                <fullName>DWC/ACR-HQ</fullName>
            </value>
            <value>
                <fullName>DWC/PSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>