force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Unit_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>