force-app/main/default/objects/Unit__c/listViews/My_Units.listView-meta.xml
<ListView>
    <fullName>My_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Units</label>
</ListView>